2015-02-09  Titus Brown  <titus@idyll.org>

   * scripts/split-paired-reads.py: added -1 and -2 options to allow fine-
   grain specification of output locations; switch to using write_record
   instead of script-specific output functionality.
   * tests/test_scripts.py: added accompanying tests.

2015-02-09  Bede Constantinides  <bede.constantinides@manchester.ac.uk>

   * scripts/split-paired-reads.py: added -o option to allow specification
   of an output directory
   * tests/test_scripts.py: added accompanying test for split-paired-reads.py

2015-02-01  Titus Brown  <titus@idyll.org>

   * khmer/_khmermodule.cc: added functions hash_find_all_tags_list and
   hash_get_tags_and_positions to CountingHash objects.
   * tests/test_counting_hash.py: added tests for new functionality.

2015-01-25  Titus Brown  <titus@idyll.org>

   * sandbox/correct-errors.py: fixed sequence output so that quality
   scores length always matches the sequence length; fixed argparse
   setup to make use of default parameter.

2015-01-25  Titus Brown  <titus@idyll.org>

    * sandbox/readstats.py: fixed non-functional string interpolation at end;
    added -o to send output to a file; moved to scripts/.
    * doc/user/scripts.txt: added readstats description.
    * tests/test_scripts.py: added tests for readstats.py

2015-01-23  Jessica Mizzi  <mizzijes@msu.edu>

    * khmer/utils.py: Added single write_record fuction to write FASTA/Q
    * scripts/{abundance-dist,extract-long-sequences,extract-partitions,
    interleave-reads,normalize-by-median,sample-reads-randomly}.py: 
    Replaced FASTA/Q writing method with write_record

2015-01-23  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Makefile: remove the user installs for the `install-dependencies` target

2015-01-23  Michael R. Crusoe  <mcrusoe@msu.edu>

    * README.rst,doc/user/install.txt: clarify that we support Python 2.7.x
    and not Python 3.

2015-01-21  Luiz Irber  <irberlui@msu.edu>
