@@ -1043,9 +1043,9 @@ static PyObject * hash_get(PyObject * self, PyObject * args)
     } else if (PyString_Check(arg)) {
         std::string s = PyString_AsString(arg);
 
-        if (strlen(s.c_str()) < counting->ksize()) {
+        if (strlen(s.c_str()) != counting->ksize()) {
             PyErr_SetString(PyExc_ValueError,
-                            "string length must >= the counting table k-mer size");
+                            "k-mer size must equal the counting table k-mer size");
             return NULL;
         }
 
@@ -1375,8 +1375,8 @@ static PyObject * hash_find_all_tags_list(PyObject * self, PyObject *args)
     }
 
     if (strlen(kmer_s) != counting->ksize()) {
-        PyErr_SetString( PyExc_ValueError,
-                         "starting kmer is a different size than the K size of the counting table");
+        PyErr_SetString(PyExc_ValueError,
+                        "kmer length must equal the counting table k-mer size");
         return NULL;
     }
 
@@ -1448,9 +1448,9 @@ static PyObject * hash_find_all_tags_truncate_on_abundance(PyObject * self,
         return NULL;
     }
 
-    if (strlen(kmer_s) < counting->ksize()) {
+    if (strlen(kmer_s) != counting->ksize()) {
         PyErr_SetString(PyExc_ValueError,
-                        "kmer_s must be less than the k-mer size of the counting hash");
+                        "kmer size must equal the k-mer size of the counting table");
         return NULL;
     }
 
@@ -1922,7 +1922,7 @@ static PyObject * hashbits_count(PyObject * self, PyObject * args)
 
     if (strlen(kmer) != hashbits->ksize()) {
         PyErr_SetString(PyExc_ValueError,
-                        "k-mer length must be the same as the hashbits k-size");
+                        "k-mer length must equal the presence table k-mer size");
         return NULL;
     }
 
@@ -2101,7 +2101,7 @@ static PyObject * hashbits_get(PyObject * self, PyObject * args)
 
         if (strlen(s.c_str()) < hashbits->ksize()) {
             PyErr_SetString(PyExc_ValueError,
-                            "string length must >= the presence table k-mer size");
+                            "string length must equal the presence table k-mer size");
             return NULL;
         }
 
@@ -2562,9 +2562,9 @@ static PyObject * hashbits_find_all_tags(PyObject * self, PyObject *args)
         return NULL;
     }
 
-    if (strlen(kmer_s) < hashbits->ksize()) {
+    if (strlen(kmer_s) != hashbits->ksize()) {
         PyErr_SetString( PyExc_ValueError,
-                         "starting kmer is smaller than the K size of the hashbits");
+                         "k-mer size must equal the k-mer size of the presence table");
         return NULL;
     }
 
@@ -4526,7 +4526,7 @@ static PyObject * forward_hash_no_rc(PyObject * self, PyObject * args)
 
     if (strlen(kmer) != ksize) {
         PyErr_SetString(PyExc_ValueError,
-                        "k-mer length must be the same as the hashtable k-size");
+                        "k-mer length must equal the k-size");
         return NULL;
     }
 
